--- a/project4react/components/states/States.css
+++ b/project4react/components/states/States.css
@@ -6,35 +6,36 @@ cs142-states- here.
 */
 
 .cs-142-states-container {
-	font-family: monospace;
+   font-family: monospace;
 }
 
 #cs-142-states-list {
-	display: flex;
-	flex-direction: column;
-	flex-wrap: wrap;
-	height: 300px;
-	background-color: lightsalmon;
-	opacity: 0.8;
+   display: flex;
+   flex-direction: column;
+   flex-wrap: wrap;
+   height: 300px;
+   background-color: lightsalmon;
+   opacity: 0.8;
 }
 #cs-142-states-list div {
-	color: black;
-	padding: 2px;
+   color: black;
+   background-color: aquamarine;
+   padding: 2px;
 }
 #cs-142-states-filterInput {
-	height: 40px;
-	width: 50%;
-	font-size: 20pt;
+   height: 40px;
+   width: 50%;
+   font-size: 20pt;
 }
 body {
-	background-color: lightcoral;
+   background-color: lightcoral;
 }
 h1 {
-	color: black;
-	background-color: lightsalmon;
+   color: black;
+   background-color: lightsalmon;
 }
 input {
-	background-color: lightsalmon;
-	color: black;
-	border: 1px solid black;
+   background-color: lightsalmon;
+   color: black;
+   border: 1px solid black;
 }
