--- a/project5react/components/userDetail/userDetail.css
+++ b/project5react/components/userDetail/userDetail.css
@@ -1,5 +1,5 @@
 .detail {
-   background-color: #fafafa98;
+   background-color: green;
    display: flex;
    flex-direction: row;
    color: #3f51b5;
