--- a/project5react/components/Photo/Photo.css
+++ b/project5react/components/Photo/Photo.css
@@ -1,21 +1,3 @@
-.Photo {
-   align-items: center;
-   width: 300px;
-   height: 350px;
-   padding: 10px;
-   margin-right: 10%;
-   background-color: #fafafad9;
-}
-.Photo h5 {
-   padding: 0;
-   margin: 0;
-   text-align: right;
-}
-.Photo img {
-   height: 250px;
-   width: 320px;
-   border: 2px solid #ffffff;
-}
 .comment {
    color: black;
 }
@@ -26,15 +8,21 @@
    background-color: white;
    margin-bottom: 2px;
 }
-.comment_container .comment_user {
+.Card {
+   margin-bottom: 50px;
+}
+.Card img {
+   max-width: 100%;
+   height: auto;
+}
+.comment_user {
    font-weight: 800;
+   font-size: 13px;
 }
 
-.comment_container .comment_text {
+.comment_text {
    font-weight: 200;
    font-size: 13px;
-   padding: 0;
-   margin: 0;
 }
 .link {
    text-decoration: none;
