--- a/project5react/components/userList/userList.css
+++ b/project5react/components/userList/userList.css
@@ -1,8 +1,8 @@
-.user{
- text-decoration: none;
- color: blue;
- transition: all .8s ease-in-out;
+.user {
+   text-decoration: none;
+   color: black;
+   transition: all 0.8s ease-in-out;
 }
-.user:hover{
-    text-decoration:underline;
+.user:hover {
+   text-decoration: underline;
 }
